[gd_scene load_steps=4 format=2]

[ext_resource path="res://Tools/DebugCircle.gd" type="Script" id=1]
[ext_resource path="res://Tools/CircleEdgeTool.gd" type="Script" id=2]
[ext_resource path="res://Tools/CircleFillTool.gd" type="Script" id=3]

[node name="DebugCircle" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": "	"
}
radius = 500.0
adjustment_zone = 0.5

[node name="CircleFill" type="Polygon2D" parent="."]
color = Color( 0.875333, 1, 0.83, 0.243137 )
polygon = PoolVector2Array( -2.18557e-05, -500, 34.8782, -498.782, 69.5866, -495.134, 103.956, -489.074, 137.819, -480.631, 171.01, -469.846, 203.368, -456.773, 234.736, -441.474, 264.96, -424.024, 293.893, -404.509, 321.394, -383.022, 347.329, -359.67, 371.572, -334.565, 394.005, -307.831, 414.519, -279.596, 433.013, -250, 449.397, -219.186, 463.592, -187.303, 475.528, -154.508, 485.148, -120.961, 492.404, -86.8241, 497.261, -52.2642, 499.695, -17.4498, 499.695, 17.4497, 497.261, 52.2642, 492.404, 86.8241, 485.148, 120.961, 475.528, 154.508, 463.592, 187.303, 449.397, 219.186, 433.013, 250, 414.519, 279.596, 394.005, 307.831, 371.572, 334.565, 347.329, 359.67, 321.394, 383.022, 293.893, 404.509, 264.96, 424.024, 234.736, 441.474, 203.368, 456.773, 171.01, 469.846, 137.819, 480.631, 103.956, 489.074, 69.5866, 495.134, 34.8783, 498.782, -2.18557e-05, 500, -34.8782, 498.782, -69.5865, 495.134, -103.956, 489.074, -137.819, 480.631, -171.01, 469.846, -203.368, 456.773, -234.736, 441.474, -264.96, 424.024, -293.893, 404.509, -321.394, 383.022, -347.329, 359.67, -371.572, 334.565, -394.005, 307.831, -414.519, 279.596, -433.013, 250, -449.397, 219.186, -463.592, 187.303, -475.528, 154.509, -485.148, 120.961, -492.404, 86.8242, -497.261, 52.2642, -499.695, 17.4497, -499.695, -17.4496, -497.261, -52.2641, -492.404, -86.824, -485.148, -120.961, -475.528, -154.508, -463.592, -187.303, -449.397, -219.185, -433.013, -250, -414.519, -279.596, -394.005, -307.831, -371.572, -334.565, -347.329, -359.67, -321.394, -383.022, -293.893, -404.508, -264.96, -424.024, -234.736, -441.474, -203.368, -456.773, -171.01, -469.846, -137.819, -480.631, -103.956, -489.074, -69.5866, -495.134, -34.8783, -498.782 )
script = ExtResource( 3 )
radius = 500.0

[node name="CircleEdge" type="Line2D" parent="."]
points = PoolVector2Array( -2.18557e-05, -500, 86.8241, -492.404, 171.01, -469.846, 250, -433.013, 321.394, -383.022, 383.022, -321.394, 433.013, -250, 469.846, -171.01, 492.404, -86.8241, 500, 0, 492.404, 86.8241, 469.846, 171.01, 433.013, 250, 383.022, 321.394, 321.394, 383.022, 250, 433.013, 171.01, 469.846, 86.8242, 492.404, -2.18557e-05, 500, -86.8241, 492.404, -171.01, 469.846, -250, 433.013, -321.394, 383.022, -383.022, 321.394, -433.013, 250, -469.846, 171.01, -492.404, 86.8242, -500, 7.54979e-05, -492.404, -86.824, -469.846, -171.01, -433.013, -250, -383.022, -321.394, -321.394, -383.022, -250, -433.013, -171.01, -469.846, -86.8241, -492.404, 4.36322, -499.981 )
width = 5.0
default_color = Color( 0.533333, 0.756863, 0.419608, 1 )
joint_mode = 2
antialiased = true
script = ExtResource( 2 )
radius = 500.0
segments = 36

[node name="Deadzone" type="Node2D" parent="."]

[node name="Clockwise" type="Line2D" parent="Deadzone"]
position = Vector2( -0.943909, 0 )
points = PoolVector2Array( 0, 0, 490.033, -99.3347 )
width = 5.0

[node name="CounterClockwise" type="Line2D" parent="Deadzone"]
points = PoolVector2Array( 0, 0, 490.033, 99.3347 )
width = 5.0

[node name="AdjustmentZone" type="Node2D" parent="."]

[node name="Clockwise" type="Line2D" parent="AdjustmentZone"]
points = PoolVector2Array( 0, 0, 438.791, -239.713 )
default_color = Color( 0.533333, 0.756863, 0.419608, 1 )

[node name="CounterClockwise" type="Line2D" parent="AdjustmentZone"]
points = PoolVector2Array( 0, 0, 438.791, 239.713 )
default_color = Color( 0.533333, 0.756863, 0.419608, 1 )

[node name="OvershootZone" type="Node2D" parent="."]

[node name="Clockwise" type="Line2D" parent="OvershootZone"]
points = PoolVector2Array( 0, 0, -2.18557e-05, -500 )
default_color = Color( 1, 0.960784, 0.341176, 0.470588 )

[node name="CounterClockwise" type="Line2D" parent="OvershootZone"]
points = PoolVector2Array( 0, 0, -2.18557e-05, 500 )
default_color = Color( 1, 0.960784, 0.341176, 0.470588 )

[node name="TargetAngle" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 500, 0 )
width = 5.0
default_color = Color( 1, 0.521569, 0.521569, 1 )
